Thu Apr 30 18:19:46 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/arch/tcpip/TCPIP.mpc:
        * cuts/arch/tcpip/TCPIP_ComponentServer.h:
        * cuts/arch/tcpip/TCPIP_ComponentServer.inl:
        * cuts/arch/tcpip/TCPIP_ComponentServer.cpp:
        * cuts/arch/tcpip/TCPIP_Connector.h:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint.h:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint.inl:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint.cpp:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint_T.h:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint_T.inl:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint_T.cpp:

          . Extracted the *endpoint* code for connecting to a remote
            client and sending events into a reusable class.

        * examples/arch/tcpip/HelloWorld/HelloWorld_svnt.h:
        * examples/arch/tcpip/HelloWorld/HelloWorld_svnt.cpp:

          . Updated the example to use the CUTS_TCPIP_Remote_Endpoint
            classes.

Thu Apr 30 17:50:40 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * cuts/arch/dsto/DDS/*.*:

          New subdirectory, containing a copy of the original DSTO example,
          modified to use OpenSpliceDDS to send the data instead of
          using CORBA eventtypes.

Thu Apr 30 16:06:00 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/arch/tcpip/ccm/TCPIP_CCM_EventConsumer.cpp:

          . Bug fix where using INADDR_ANY or INADDR6_ANY for the TCPIP
            acceptor did not return the right address for the event consumer's
            endpoint.

        * cuts/arch/tcpip/ccm/TCPIP_CCM.mpc:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_ComponentServer.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_ComponentServer.cpp:

          . Separated the component server's active object from the
            actual component server.

Thu Apr 30 15:21:05 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/arch/tcpip/TCPIP.mpc: